# claude-watch

./: .env.example  .gitignore  CLAUDE.md  CRUSH.md  Cargo.toml  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  NEW_FORMAT_ADAPTER_REPORT.md  OLLAMA_NEW_USAGE.md  OLLAMA_RS_INTEGRATION.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS_REPORT.md  PROJECT_SUMMARY.md  PROMPT_FIX_EXPLANATION.md  README.md  README_CN.md  RELEASE.md  TESTING.md  TEST_FRAMEWORK.md  acceptance-criteria.md  api-spec.md  architecture.md  architecture_design.md  build-musl.sh  claude_code_adapter_architecture.md  config.example.yaml  config.test.yaml  debug_regex.rs  debug_test.rs  ollama-rs-guide.md  ollama-rs-总结.md  prompt.md  prompt_final.md  prompt_optimized.md  prompt_optimized_v2.md  prompt_optimized_v3.md  requirements.md  requirements_analysis_new_format.md  simple_test  tech-stack.md  (+3 more)
.github/workflows/: ci.yml  release.yml
benches/: performance_bench.rs
examples/: debug_time.rs  debug_user_input.rs  ollama_usage_example.rs  unicode_test.rs
src/: activity.rs  args.rs  config.rs  lib.rs  llm.rs  logger.rs  main.rs  monitor.rs  monitor.rs.backup  ollama_client.rs  ollama_integration.rs  testing.rs  tmux.rs
test_data/claude_interfaces/: completed_state.txt  current_state.txt  finish_state.txt  hello_world_completed.txt  hello_world_final.txt  hello_world_working.txt  interrupted_state.txt  philosophising_state.txt  philosophising_tail.txt  processing_response.txt  processing_state.txt  stuck_state.txt  user_input_state.txt  working_state.txt
tests/: activity_detection.rs  comprehensive_tests.rs  debug_time_test.rs  integration.rs  llm_mock.rs  llm_mock.rs.disabled  new_format_integration.rs  new_format_tests.rs  new_format_validation.rs  performance_tests.rs  progress_detection.rs  real_captured_data_tests.rs  real_data_unit_tests.rs  real_interface_tests.rs  simple_time_test.rs  time_detection.rs
