[package]
name = "claude-watch"
version = "1.0.2"
edition = "2021"

[dependencies]
seahash = "4.1"
dotenvy = "0.15"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
regex = "1"
ollama-rs = "0.3.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

# Musl构建配置
[package.metadata.cross.target.x86_64-unknown-linux-musl]
pre-built = true

# 为musl构建调整依赖
[target.x86_64-unknown-linux-musl.dependencies]
# 使用原生tls实现，避免openssl的复杂依赖
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
