[package]
name = "claude-watch"
version = "1.0.2"
edition = "2021"

[dependencies]
seahash = "4.1"
dotenvy = "0.15"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
regex = "1"
ollama-rs = "0.3.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
serde_json = "1"
wiremock = "0.6"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"

[[bench]]
name = "performance_bench"
harness = false